# outreachspeedoflight

./: README.md  setup.cfg
src/outreachspeedoflight/: daq.py  highscorewindow.py  speedoflightgui.py  strings.py
