[metadata]
name = outreachspeedoflight-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Simple frontend to illustrate our speed of light measurements for Wiener Forschungsfest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/outreachspeedoflight
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib >= 3.4.3
    PySimpleGUI >= 4.60.1
    numpy >= 1.22.4
    lmfit >= 1.0.3
    Pillow >= 9.1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    outreachspeedoflightgui = outreachspeedoflight.speedoflightgui:mainStartup

[options.package_data]
*.png